# Canopus

./: .env.example  .gitignore  Cargo.toml  Readme.md  load_env.ps1  readme.md  remarks.ps1  roadmap.txt  tags.ps1
crates/canopus-api/: Cargo.toml
crates/canopus-api/src/: error.rs  helpers.rs  main.rs  remarks.rs  tags.rs
crates/canopus-catalog-repo/: Cargo.toml  Readme.md
crates/canopus-catalog-repo/.sqlx/: query-3c200f89d9218929eeeaeed69b62255d7c3897c5112ad0bdeac62d7a0c758d05.json  query-7b59ca863ae289303b9f563b9cd29d778aa61dfd64ca959e5f04c2f1f1a2f9ad.json  query-a4b94b3afe556d976f861245d9f6a0fa786bd4809591b028350c37928c2a7019.json
crates/canopus-catalog-repo/migrations/: 20250410065952_create_brands.up.sql
crates/canopus-catalog-repo/src/: lib.rs
crates/canopus-catalog-rest-api/: Cargo.toml  config.toml.example
crates/canopus-catalog-rest-api/src/: brands.rs  helpers.rs  main.rs
crates/canopus-cli/: Cargo.toml
crates/canopus-cli/src/: cli.rs  commands.rs  display.rs  editor.rs  error.rs  formatter.rs  lib.rs  main.rs  remarks.rs  session.rs  tags.rs
crates/canopus-cli/src/cli/: formatter.rs  mod.rs  remarks.rs  tags.rs
crates/canopus-cli/src/commands/: mod.rs  remarks.rs  tags.rs
crates/canopus-client/: Cargo.toml
crates/canopus-client/examples/remarks/: main.rs
crates/canopus-client/examples/tags/: main.rs
crates/canopus-client/src/: error.rs  lib.rs  remarks.rs  rest.rs  tags.rs
crates/canopus-dataspine/: Cargo.toml
crates/canopus-dataspine/migrations/: 20250205142415_create_remarks.down.sql  20250206130945_create_tags.down.sql  20250206190544_create_remarks_tags.down.sql
crates/canopus-dataspine/src/: lib.rs
crates/canopus-dataspine/src/storage/: mod.rs  remarks.rs  remarks_tags.rs  tags.rs
crates/canopus-dataspine/tests/remarks/: main.rs
crates/canopus-dataspine/tests/remarks/support/: mod.rs
crates/canopus-dataspine/tests/storage/: main.rs
crates/canopus-dataspine/tests/storage/remarks/: create_remark_test.rs  delete_remark_test.rs  get_remark_test.rs  mod.rs  update_remark_test.rs
crates/canopus-dataspine/tests/storage/remarks_tags/: create_remark_tag_test.rs  delete_remark_tag_test.rs  mod.rs
crates/canopus-dataspine/tests/storage/support/: mod.rs
crates/canopus-dataspine/tests/storage/tags/: create_tag_test.rs  delete_tag_test.rs  get_tag_test.rs  mod.rs  update_tag_test.rs
crates/canopus-definitions/: Cargo.toml
crates/canopus-definitions/src/: error.rs  lib.rs  page.rs  remarks.rs  tags.rs
crates/canopus-definitions/src/page/: mod.rs  page_token.rs
crates/canopus-definitions/src/remarks/: mod.rs  remark_essence.rs
crates/canopus-definitions/src/tags/: mod.rs  tag_title.rs
crates/canopus-engine/: Cargo.toml
crates/canopus-engine/src/: lib.rs  remarks.rs  tags.rs
crates/canopus-engine/src/operations/: create_remark.rs  mod.rs
crates/canopus-factory/: Cargo.toml  README.md
crates/canopus-factory/.sqlx/: query-02f71ed6a07838938c15fe637c662f1719c3601d0ee689114aaf08dfd7974c56.json  query-833dfb0a05c1a3b1f87244af80e5b4da8de63a37f9bf0c1ba112ef23d1e2bd24.json  query-87dc3d4fe45627445108fba41d4a721e5554c035db6643aca0a324f51c2c019d.json
crates/canopus-factory/migrations/: 20250410065952_create_brands.up.sql  20250410172316_create_devices.up.sql
crates/canopus-factory/src/: brands.rs  cli.rs  error.rs  main.rs  repo.rs
crates/canopus-factory/src/web/: brands.rs  helpers.rs  mod.rs
crates/canopus-operations/: Cargo.toml
crates/canopus-operations/src/: lib.rs  remarks.rs  tags.rs
crates/canopus-repository/: Cargo.toml
crates/canopus-repository/.sqlx/: query-04910c9d80fcce18ed6be7844cfc71fb782b6cbb6b188d11b5c8143d664e335c.json  query-09ac4f1a37214a4e03dd426482cba874b8470b91ca5b94cb4aa37dea2737b63f.json  query-1429469072cba68864eaa81ee54ab87bda97c092fdc4129dd3f68a383cbc3f6c.json  query-1b79bba85ebec21ae4f9aacf907fdaeeb36efbc24817f0d29c93069bae2e8e32.json  query-32ee04293189c43c4f2cca981fd575d0d418c2f24a258556998f35bf9a83d5b3.json  query-33e7d629af8116b1d45d358aa12a9ce956e3f8a32cc5d561edfd7cdbbacc638e.json  query-389887c355ed078c640269addd923069d1fc278c60db92833d5dc371d1c63539.json  query-3992ce71cf4923c953d6795a7f6f9055a155b22223b9eef67c5323fecd7ab264.json  query-3ba22ab10c058bd7ff72e06adba96420e58f5f2b01fb5473d0a0395aadff9a74.json  query-494adef946dec8db6be6c7d60cd2f52143676725a8e9fae2422862d799920903.json  query-4c2b7aad4d9512d969e32fbcc497ce5c59cc9cbe3a137e7d923c79bb3535dd92.json  query-54801be5841bbbd767cb0a644a659e9946bd659248d7088c5d721b7583c22652.json  query-78e3853f4129cbd0b00a9495c4359f7334742dd62818d2cf206e7857ccda00de.json  query-7ad795203a8258aaf3abfd2028f0509152fd58b3df821162848d8eae80c17598.json  query-7bfc281d028f6b94f7cfbd0ae893d1a72d863b481450480177335f94d9c6dc71.json  query-bb150e97af6c4237208a9269195efed2b6091df460706a0db508aeebdc831e3c.json  query-db1fb0023c9c738d9eda5fa138d6cf8e64c11275b365edb7250e89e4088af668.json
crates/canopus-repository/asdf/repository/: main.rs
crates/canopus-repository/asdf/repository/remarks/: create_remark_test.rs  delete_remark_test.rs  get_remark_test.rs
crates/canopus-repository/asdf/repository/remarks_tags/: delete_remark_tag_test.rs
crates/canopus-repository/asdf/repository/support/: mod.rs
crates/canopus-repository/asdf/repository/tags/: create_tag_test.rs
crates/canopus-repository/migrations/: 20250205142415_create_remarks.down.sql  20250205142415_create_remarks.up.sql  20250206130945_create_tags.up.sql  20250206190544_create_remarks_tags.up.sql
crates/canopus-repository/src/: lib.rs  remarks.rs  remarks_tags.rs  tags.rs
crates/canopus-repository/tests/repository/remarks/: delete_remark_test.rs  update_remark_test.rs
crates/canopus-repository/tests/repository/remarks_tags/: create_remark_tag_test.rs  delete_remark_tag_test.rs
crates/canopus-repository/tests/repository/tags/: create_tag_test.rs  delete_tag_test.rs  get_tag_test.rs  (+1 more)
crates/canopus-shell/: Cargo.toml
crates/canopus-shell/src/: commands.rs  main.rs  main.rs.bak  resources.rs
crates/canopus-wire/: Cargo.toml
crates/canopus-wire/src/: error.rs  lib.rs  tags.rs
(+29 files in other folders)
