[workspace]
resolver = "3"
members = [
    "crates/canopus-cli",
    "crates/canopus-engine",
    "crates/canopus-protocol",
    "crates/canopus-repository",
    "crates/canopus-web",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
chrono = "0.4.39"
clap = "4.5.28"
csv = "1.3.1"
dotenvy = "0.15.7"
eyre = "0.6.12"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = "0.8.3"
thiserror = "2.0.11"
tokio = "1.43.0"
uuid = "1.13.1"

canopus-engine = { path = "crates/canopus-engine" }
canopus-protocol = { path = "crates/canopus-protocol" }
canopus-repository = { path = "crates/canopus-repository" }
