[workspace]
resolver = "3"
members = [ "catalog",
    "crates/canopus-api",
    "crates/canopus-cli",
    "crates/canopus-client",
    "crates/canopus-definitions",
    "crates/canopus-engine",
    "crates/canopus-operations",
    "crates/canopus-repository",
    "crates/canopus-shell",
    "crates/canopus-tests",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
shlex = "1.3.0"
base64 = "0.22.1"
chrono = "0.4.39"
clap = "4.5.28"
csv = "1.3.1"
dotenvy = "0.15.7"
eyre = "0.6.12"
itertools = "0.14.0"
reqwest = "0.12.12"
rocket = "0.5.1"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = "0.8.3"
thiserror = "2.0.11"
tokio = "1.43.0"
tracing = "0.1.41"
url = "2.5.4"
uuid = "1.13.1"

canopus-cli = { path = "crates/canopus-cli" }
canopus-client = { path = "crates/canopus-client" }
canopus-definitions = { path = "crates/canopus-definitions" }
canopus-engine = { path = "crates/canopus-engine" }
canopus-operations = { path = "crates/canopus-operations" }
canopus-repository = { path = "crates/canopus-repository" }
