[package]
name = "canopus-api"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
rocket = { workspace = true, features = ["json"] }
tracing = { workspace = true }
uuid = { workspace = true }

canopus-definitions = { workspace = true }
canopus-engine = { workspace = true }
canopus-operations = { workspace = true }

# tracing
opentelemetry = "0.28.0"
opentelemetry_sdk = "0.28.0"
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
tracing-core = "0.1.33"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = "0.3.19"
