[package]
name = "canopus-catalog-repo"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
uuid = { workspace = true }

# Canopus dependencies
canopus-catalog = { workspace = true }
