[package]
name = "canopus-cli"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
csv = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = ["serde"] }

canopus-definitions = { workspace = true }
canopus-client = { workspace = true }
