[package]
name = "canopus-cli"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "canopus_cli"
path = "src/lib.rs"

[[bin]]
name = "canopus-cli"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = ["serde"] }

canopus-definitions = { workspace = true }
canopus-client = { workspace = true }
