[package]
name = "canopus-client"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "canopus_client"

[dependencies]
anyhow = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true }

canopus-definitions = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"]}
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
