[package]
name = "canopus-client"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "canopus_client"

[dependencies]
eyre = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }

canopus-definitions = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"]}
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
