[package]
name = "canopus-definitions"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "canopus_definitions"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
