[package]
name = "canopus-factory"
version = "0.1.0"
edition.workspace = true

[dependencies]
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
eyre = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
rocket = { workspace = true, features = ["json"] }
clap = { workspace = true, features = ["derive"] }
