[package]
name = "canopus-operations"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "canopus_operations"

[dependencies]
chrono = { workspace = true }
csv = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

canopus-definitions = { workspace = true }
