[package]
name = "canopus-repository"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "canopus_repository"

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

canopus-protocol = { workspace = true }
canopus-dataspine = { workspace = true }
