[package]
name = "canopus-repository"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "canopus_repository"

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
thiserror = { workspace = true }
uuid = { workspace = true }

canopus-protocol = { workspace = true }
