[package]
name = "canopus-repository"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "canopus_repository"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

canopus-operations = { workspace = true }
canopus-definitions = { workspace = true }
