[package]
name = "canopus-shell"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
dotenvy = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

canopus-cli = { workspace = true }
canopus-definitions = { workspace = true }
