[package]
name = "canopus-wire"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "canopus_wire"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }

canopus-definitions = { workspace = true }
